# template_py_lib

./: .coverage  .gitignore  LICENSE-BSD3  LICENSE-GPL  LICENSE-LGPL  LICENSE-MIT  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
src/template_py_lib/: your_module1.py
tests/: test_your_module1.py
