[metadata]
name = your_package_name
description = A short description of your package
url = https://github.com/your_username/your_package_name
author = Your Name
author_email = your_email@example.com
license = BSD3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = find:
install_requires =
    # list your dependencies here
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[tool.black]
line-length = 120
target-version = ['py37']
exclude = /(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/

[mypy]
ignore_missing_imports = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[tool:pytest]
addopts = --verbose
testpaths = tests

[coverage:run]
branch = True
source = your_package_name
